update kms